Adjust Extra Main Func w/ proper SysArgs + Model

--- a/predict_price_range.py.ipynb
+++ b/predict_price_range.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "8002dde5",
    "metadata": {},
    "outputs": [
@@ -78,8 +78,10 @@
     "# Main function with sys.args for DEPLOY in CLI Cloud systems\n",
     "\n",
     "# if __name__ == '__main__':\n",
-    "#     data_file = sys.argv[1]\n",
-    "#     predict_big5()"
+    "#     new_data = sys.argv[1]\n",
+    "#     encoder = sys.argv[2]\n",
+    "#     encoded_features = sys.argv[3]\n",
+    "#     predict_price_range()"
    ]
   },
   {
